[gd_scene load_steps=43 format=3 uid="uid://b8edqnujkb6fm"]

[ext_resource type="Texture2D" uid="uid://c235lpm2aw6h3" path="res://Art/Temporary/rock.png" id="1_8xge3"]
[ext_resource type="Texture2D" uid="uid://vqtu1htnlp2s" path="res://Art/Tiles/frame_tiles.png" id="2_tngrp"]
[ext_resource type="Texture2D" uid="uid://cpybmvodc12qs" path="res://Art/Tiles/path_full.png" id="3_i17ty"]
[ext_resource type="PackedScene" uid="uid://btkanmss3nsbk" path="res://Prefabs/Player.tscn" id="4_67xd3"]
[ext_resource type="Texture2D" uid="uid://dfmuobn2l6wtd" path="res://Art/Tiles/decor.png" id="4_b5dw6"]
[ext_resource type="Texture2D" uid="uid://c7iuq1aqu6igb" path="res://Art/Tiles/startNfinish.png" id="4_whg86"]
[ext_resource type="PackedScene" uid="uid://ckcnevvqf7sah" path="res://Prefabs/Tiles/ScorableTile.tscn" id="5_lxogj"]
[ext_resource type="Texture2D" uid="uid://olnb3gy4vjue" path="res://Art/Tiles/dirt_tiles.png" id="6_cd20j"]
[ext_resource type="PackedScene" uid="uid://t78ls4qeu3ak" path="res://Prefabs/Tiles/Gate.tscn" id="6_lh8h5"]
[ext_resource type="Texture2D" uid="uid://d3shic8pwfvwd" path="res://Art/Tiles/path_empty.png" id="9_5dlnv"]
[ext_resource type="PackedScene" uid="uid://6vyn2y538dd8" path="res://Prefabs/UI/SnowballSizeUI.tscn" id="11_pej1e"]
[ext_resource type="Script" path="res://Scripts/UI/UIControls.gd" id="13_cl2jw"]
[ext_resource type="Texture2D" uid="uid://mwvmfhsya0t6" path="res://Art/UI/Menu/leveldisplay.png" id="14_iffrs"]
[ext_resource type="Script" path="res://Scripts/UI/LevelDisplay.gd" id="15_bkjhs"]
[ext_resource type="FontFile" uid="uid://haqm21t8axo3" path="res://Art/DejaVuSansMono-Bold.ttf" id="16_8oel5"]
[ext_resource type="Texture2D" uid="uid://bpp7bih08pp6l" path="res://Art/UI/Menu/smallButton/square-button.png" id="17_jpnqi"]
[ext_resource type="Texture2D" uid="uid://cfkrripy500v" path="res://Art/UI/Menu/smallButton/square-button-hover.png" id="18_mj84e"]
[ext_resource type="Texture2D" uid="uid://dtpnmjlm1jcxc" path="res://Art/UI/Menu/smallButton/square-button-active.png" id="19_errwt"]
[ext_resource type="Texture2D" uid="uid://bpbnet1dkfolj" path="res://Art/UI/Menu/restart.png" id="20_876ug"]
[ext_resource type="Texture2D" uid="uid://bl5a81nvwrmv" path="res://Art/UI/Menu/smallButton/icon-exit.png" id="21_851u5"]
[ext_resource type="Texture2D" uid="uid://coc2oldajy5ql" path="res://Art/UI/Menu/smallButton/icon-pause.png" id="22_38yw4"]
[ext_resource type="Texture2D" uid="uid://36046c6s6win" path="res://Art/UI/Menu/smallButton/icon-settings.png" id="23_xfmse"]

[sub_resource type="GDScript" id="GDScript_3v5xg"]
script/source = "extends Node2D

"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8km48"]
texture = ExtResource("1_8xge3")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5ywqr"]
texture = ExtResource("2_tngrp")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mkefx"]
texture = ExtResource("3_i17ty")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s53g4"]
texture = ExtResource("4_b5dw6")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0py25"]
texture = ExtResource("4_whg86")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_amgjp"]
texture = ExtResource("9_5dlnv")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vwanq"]
texture = ExtResource("6_cd20j")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_3hh4y"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_8km48")
sources/2 = SubResource("TileSetAtlasSource_mkefx")
sources/3 = SubResource("TileSetAtlasSource_s53g4")
sources/5 = SubResource("TileSetAtlasSource_amgjp")
sources/4 = SubResource("TileSetAtlasSource_0py25")
sources/6 = SubResource("TileSetAtlasSource_vwanq")
sources/1 = SubResource("TileSetAtlasSource_5ywqr")

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ief"]
atlas = ExtResource("9_5dlnv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0fhy"]
atlas = ExtResource("9_5dlnv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmof7"]
atlas = ExtResource("9_5dlnv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m535o"]
atlas = ExtResource("9_5dlnv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_avc6m"]
atlas = ExtResource("9_5dlnv")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhwji"]
atlas = ExtResource("9_5dlnv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d4dp"]
atlas = ExtResource("9_5dlnv")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcfi5"]
atlas = ExtResource("9_5dlnv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xve3x"]
texture = ExtResource("17_jpnqi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kcoa0"]
texture = ExtResource("18_mj84e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ro800"]
texture = ExtResource("19_errwt")

[node name="Root" type="Node2D"]
script = SubResource("GDScript_3v5xg")

[node name="Border" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3hh4y")
format = 2
layer_0/tile_data = PackedInt32Array(-524304, 1, 0, -524303, 65537, 0, -524302, 65537, 0, -524301, 65537, 0, -524300, 65537, 0, -524299, 65537, 0, -524298, 65537, 0, -524297, 65537, 0, -524296, 65537, 0, -524295, 65537, 0, -524294, 65537, 0, -524293, 65537, 0, -524292, 65537, 0, -524291, 65537, 0, -524290, 65537, 0, -524289, 65537, 0, -589824, 65537, 0, -589823, 65537, 0, -589822, 65537, 0, -589821, 65537, 0, -589820, 65537, 0, -589819, 65537, 0, -589818, 65537, 0, -589817, 65537, 0, -589816, 65537, 0, -589815, 65537, 0, -589814, 65537, 0, -589813, 65537, 0, -589812, 65537, 0, -589811, 65537, 0, -589810, 65537, 0, -589809, 131073, 0, 589808, 1, 2, 589809, 65537, 2, 589810, 65537, 2, 589811, 65537, 2, 589812, 65537, 2, 589813, 65537, 2, 589814, 65537, 2, 589815, 65537, 2, 589816, 65537, 2, 589817, 65537, 2, 589818, 65537, 2, 589819, 65537, 2, 589820, 65537, 2, 589821, 65537, 2, 589822, 65537, 2, 589823, 65537, 2, 524288, 65537, 2, 524289, 65537, 2, 524290, 65537, 2, 524291, 65537, 2, 524292, 65537, 2, 524293, 65537, 2, 524294, 65537, 2, 524295, 65537, 2, 524296, 65537, 2, 524297, 65537, 2, 524298, 65537, 2, 524299, 65537, 2, 524300, 65537, 2, 524301, 65537, 2, 524302, 65537, 2, 524303, 131073, 2, -524273, 131073, 1, -458737, 131073, 1, -393201, 131073, 1, -327665, 131073, 1, -262129, 131073, 1, -196593, 131073, 1, -131057, 131073, 1, -65521, 131073, 1, 15, 131073, 1, 65551, 131073, 1, 131087, 131073, 1, 196623, 131073, 1, 262159, 131073, 1, 327695, 131073, 1, 393231, 131073, 1, 458767, 131073, 1, -458768, 1, 1, -393232, 1, 1, -327696, 1, 1, -262160, 1, 1, -196624, 1, 1, -131088, 1, 1, -65552, 1, 1, -16, 1, 1, 65520, 1, 1, 131056, 1, 1, 196592, 1, 1, 262128, 1, 1, 327664, 1, 1, 393200, 1, 1, 458736, 1, 1, 524272, 1, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3hh4y")
format = 2
layer_0/tile_data = PackedInt32Array(-327683, 65538, 1610612736, -327682, 2, 0, -327681, 2, 0, -393216, 2, 0, -65539, 65538, 805306368, -65538, 2, 0, -65537, 2, 0, -131071, 2, 0, -131072, 5, 0, -393215, 2, 0, -393214, 65538, 0, -131070, 65538, 1342177280, -196606, 2, 1342177280, -327678, 2, 1342177280, -262142, 2, 1, -262141, 2, 0, -262140, 2, 0, -262139, 2, 0, -262138, 65540, 0, -131075, 2, 1342177280, -262147, 2, 1342177280, -196611, 2, 805306369, -196612, 2, 0, -196613, 2, 0, -196614, 2, 0, -196615, 4, 0, -262146, 196611, 3, -262145, 196611, 3, -327680, 196611, 3, -327679, 196611, 3, -262143, 196611, 3, -262144, 196611, 3, -196610, 196611, 3, -131074, 196611, 3, -131073, 196611, 3, -196608, 196611, 3, -196607, 196611, 3, -196602, 196611, 3, -196603, 196611, 3, -196604, 196611, 3, -196605, 196611, 3, -131069, 196611, 3, -131068, 196611, 3, -131067, 196611, 3, -131066, 196611, 3, -65530, 196611, 3, -65531, 196611, 3, -65532, 196611, 3, -65533, 196611, 3, -65534, 196611, 3, -65535, 196611, 3, -65536, 196611, 3, -1, 196611, 3, -2, 196611, 3, -3, 196611, 3, -4, 196611, 3, -5, 196611, 3, -6, 196611, 3, -7, 196611, 3, -65543, 196611, 3, -131079, 196611, 3, -131078, 196611, 3, -131077, 196611, 3, -131076, 196611, 3, -65540, 196611, 3, -65541, 196611, 3, -65542, 196611, 3, -262151, 196611, 3, -262150, 196611, 3, -262149, 196611, 3, -262148, 196611, 3, -327684, 196611, 3, -393220, 196611, 3, -393221, 196611, 3, -393222, 196611, 3, -327686, 196611, 3, -327687, 196611, 3, -393223, 196611, 3, -327685, 196611, 3, -393219, 196611, 3, -393218, 196611, 3, -393217, 196611, 3, -458752, 196611, 3, -458751, 196611, 3, -458750, 196611, 3, -458749, 196611, 3, -393213, 196611, 3, -327677, 196611, 3, -327676, 196611, 3, -327675, 196611, 3, -393211, 196611, 3, -393210, 196611, 3, -458746, 196611, 3, -458747, 196611, 3, -458748, 196611, 3, -393212, 196611, 3, -327674, 196611, 3, -196609, 196611, 3, -524281, 131078, 1, -524282, 65542, 1, -524283, 65542, 1, -524284, 65542, 1, -524285, 65542, 1, -524286, 65542, 1, -524287, 65542, 1, -524288, 65542, 1, -458753, 65542, 1, -458754, 65542, 1, -458755, 65542, 1, -458756, 65542, 1, -458757, 65542, 1, -458758, 65542, 1, -458759, 65542, 1, -458760, 6, 1, -393224, 6, 2, -327688, 6, 2, -262152, 6, 2, -196616, 6, 2, -131080, 6, 2, -65544, 6, 2, 65528, 6, 3, -8, 6, 2, 65529, 65542, 3, 65530, 65542, 3, 65531, 65542, 3, 65532, 65542, 3, 65533, 65542, 3, 65534, 65542, 3, 65535, 65542, 3, 0, 65542, 3, 1, 65542, 3, 2, 65542, 3, 3, 65542, 3, 4, 65542, 3, 5, 65542, 3, 6, 65542, 3, 7, 131078, 3, -65529, 131078, 2, -131065, 131078, 2, -196601, 131078, 2, -262137, 131078, 2, -327673, 131078, 2, -393209, 131078, 2, -458745, 131078, 2)

[node name="TileMap - Details" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3hh4y")
format = 2
layer_0/tile_data = PackedInt32Array(-196608, 196611, 2, -262144, 196611, 1, -262145, 196611, 1, -393211, 196611, 1, -393210, 196611, 1, -131067, 196611, 1, -65531, 196611, 1, -1, 196611, 1, -65536, 196611, 1, -6, 196611, 1, -7, 196611, 1, -65543, 196611, 1, -327685, 196611, 1, -327686, 196611, 1, -393218, 196611, 1, -131079, 3, 3, -131078, 131075, 3, -262151, 3, 3, -262150, 131075, 3, -196602, 131075, 3, -327674, 131075, 3, -327675, 3, 3, -196603, 3, 3)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.25, 2.25)

[node name="ScorableTiles - Positive" type="Node2D" parent="."]

[node name="ScorableTile" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-88, -56)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile2" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-72, -56)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile18" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-24, -24)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile19" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-8, -24)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile20" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-40, -24)
rotation = -3.14159
exportFillingSprite = SubResource("AtlasTexture_e0fhy")

[node name="ScorableTile22" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(40, -40)
rotation = 1.5708
exportFillingSprite = SubResource("AtlasTexture_nmof7")

[node name="ScorableTile21" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(24, -24)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile3" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-56, -56)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile15" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-40, -72)
rotation = 1.5708
exportFillingSprite = SubResource("AtlasTexture_nmof7")

[node name="ScorableTile16" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-40, -40)
rotation = 1.5708
exportFillingSprite = SubResource("AtlasTexture_nmof7")

[node name="ScorableTile17" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(40, -72)
rotation = 1.5708
exportFillingSprite = SubResource("AtlasTexture_nmof7")

[node name="ScorableTile13" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(24, -88)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile14" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(40, -88)
exportFillingSprite = SubResource("AtlasTexture_m535o")

[node name="ScorableTile4" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-40, -56)
rotation = -3.14159
exportFillingSprite = SubResource("AtlasTexture_avc6m")

[node name="ScorableTile5" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-40, -88)
rotation = -1.5708
exportFillingSprite = SubResource("AtlasTexture_vhwji")

[node name="ScorableTile6" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-24, -88)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile7" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(-8, -88)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile8" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(8, -88)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile9" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(40, -56)
exportFillingSprite = SubResource("AtlasTexture_8d4dp")

[node name="ScorableTile10" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(56, -56)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile11" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(72, -56)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTile23" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(40, -24)
rotation = 1.5708
exportFillingSprite = SubResource("AtlasTexture_vcfi5")

[node name="ScorableTile12" parent="ScorableTiles - Positive" instance=ExtResource("5_lxogj")]
position = Vector2(88, -56)
exportFillingSprite = SubResource("AtlasTexture_s1ief")

[node name="ScorableTiles - Negative" type="Node2D" parent="."]

[node name="ScorableTile11" parent="ScorableTiles - Negative" instance=ExtResource("5_lxogj")]
position = Vector2(8, -24)
score = -3

[node name="Player" parent="." instance=ExtResource("4_67xd3")]
position = Vector2(-104, -56)

[node name="SnowballSizeUI" parent="." instance=ExtResource("11_pej1e")]
offset_top = 94.0
offset_bottom = 94.0

[node name="Gate" parent="." instance=ExtResource("6_lh8h5")]
position = Vector2(104, -56)
reqSize = 5
levelPathToLoad = "res://Levels/Level 2.tscn"

[node name="UIControls" type="Node2D" parent="."]
script = ExtResource("13_cl2jw")

[node name="Top Left Stuff" type="Node2D" parent="UIControls"]
position = Vector2(-214, -112)

[node name="LevelDisplay" type="Sprite2D" parent="UIControls/Top Left Stuff"]
position = Vector2(-3, -3)
texture = ExtResource("14_iffrs")
script = ExtResource("15_bkjhs")

[node name="Label" type="Label" parent="UIControls/Top Left Stuff/LevelDisplay"]
offset_left = -19.0
offset_top = -9.0
offset_right = 21.0
offset_bottom = 9.0
theme_override_fonts/font = ExtResource("16_8oel5")
theme_override_font_sizes/font_size = 8
text = "placeholder"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
uppercase = true

[node name="RestartButton" type="Button" parent="UIControls/Top Left Stuff"]
offset_left = 28.0
offset_top = -16.0
offset_right = 52.0
offset_bottom = 8.0
theme_override_styles/normal = SubResource("StyleBoxTexture_xve3x")
theme_override_styles/hover = SubResource("StyleBoxTexture_kcoa0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ro800")
icon = ExtResource("20_876ug")
icon_alignment = 1

[node name="Top Right Stuff" type="Node2D" parent="UIControls"]
position = Vector2(-214, -112)

[node name="ExitButton" type="Button" parent="UIControls/Top Right Stuff"]
offset_left = 430.0
offset_top = -16.0
offset_right = 454.0
offset_bottom = 8.0
theme_override_styles/normal = SubResource("StyleBoxTexture_xve3x")
theme_override_styles/hover = SubResource("StyleBoxTexture_kcoa0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ro800")
icon = ExtResource("21_851u5")
icon_alignment = 1

[node name="PauseButton" type="Button" parent="UIControls/Top Right Stuff"]
offset_left = 402.0
offset_top = -16.0
offset_right = 426.0
offset_bottom = 8.0
theme_override_styles/normal = SubResource("StyleBoxTexture_xve3x")
theme_override_styles/hover = SubResource("StyleBoxTexture_kcoa0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ro800")
icon = ExtResource("22_38yw4")
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="UIControls/Top Right Stuff"]
offset_left = 374.0
offset_top = -16.0
offset_right = 398.0
offset_bottom = 8.0
theme_override_styles/normal = SubResource("StyleBoxTexture_xve3x")
theme_override_styles/hover = SubResource("StyleBoxTexture_kcoa0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ro800")
icon = ExtResource("23_xfmse")
icon_alignment = 1

[connection signal="pressed" from="UIControls/Top Left Stuff/RestartButton" to="UIControls" method="_on_restart_button_pressed"]
[connection signal="pressed" from="UIControls/Top Right Stuff/ExitButton" to="UIControls" method="_on_exit_button_pressed"]
[connection signal="pressed" from="UIControls/Top Right Stuff/PauseButton" to="UIControls" method="_on_pause_button_pressed"]
[connection signal="pressed" from="UIControls/Top Right Stuff/SettingsButton" to="UIControls" method="_on_settings_button_pressed"]
